doku/tests/compiletest/attrs/non_existent_parameter.stderr
error: Unknown field: `non_existent_parameter`
 --> tests/compiletest/attrs/non_existent_parameter.rs:5:12
  |
5 |     #[doku(non_existent_parameter)]
  |            ^^^^^^^^^^^^^^^^^^^^^^
